cmake_minimum_required(VERSION 3.28)
project(kengine LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.2
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

add_executable(kengine src/main.cpp
        src/Atlas.cpp
        src/Atlas.h
        src/Map.cpp
        src/Map.h
        src/Sprite.cpp
        src/Sprite.h
        src/Tile.cpp
        src/Tile.h
        src/ScreenManager.cpp
        src/ScreenManager.h
        src/ConfigGame.h
        src/ConfigGame.cpp
        src/Game.cpp
        src/Game.h
        src/Screen.cpp
        src/Screen.h)
#target_include_directories(kengine PRIVATE include/)
target_compile_features(kengine PRIVATE cxx_std_17)
target_link_libraries(kengine PRIVATE SFML::Graphics)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT kengine)